# Multi-Lingual-QAC

./: .gitignore  MULTILINGUAL_CHEMICAL_QAC_PLAN.md  PIPELINE_STEPS.md  QAC_QUALITY_NOTES.md  README.md  balanced_100_qac.csv  balanced_100_qac_all_generated.csv  balanced_100_qac_manifest.csv  main.py  pyproject.toml
docs/: DATA_LICENSE_AND_CONFIRMATION.md  JRC_ACQUIS_DATA_QUALITY_NOTES.md  JRC_ACQUIS_LANGUAGE_PAIR_COUNTS.md  JRC_ACQUIS_RETRIEVAL_CLEANUP_TODOS.md  METHOD_SECTION.tex  MODEL_SWITCH_NOTES.md  MULTILINGUAL_CHEMICAL_QAC_PLAN.md  PIPELINE_STEPS.md  QAC_QUALITY_NOTES.md  QA_GENERATION_PROCESS.md  gpt-5-guide.md
docs/paper/: jrc_acquis_multilingual_legal_retrieval_benchmark.tex
docs/paper/sections/: abstract.tex  appendix_prompt_design.tex  conclusion.tex  contributions.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
scripts/: export_qac_for_excel.py  export_zh_query_en_review.py  generate_zh_extra_qac.py  regrade_with_openrouter.py  test_sections.py  translate_to_chinese.py
src/dataloader/: google_patents.py
src/multi_lingual_qac/: cli.py  config.py  constants.py  pipeline.py
src/multi_lingual_qac/dataloaders/: __init__.py  epo.py  google_patents.py  jrc_acquis.py  wikidata.py  wikipedia_clean.py
src/multi_lingual_qac/export/: hf_upload.py
src/multi_lingual_qac/mteb/: __init__.py  evaluation.py
src/multi_lingual_qac/preprocess/: corpus.py  filter_multilingual.py
src/multi_lingual_qac/qac_generation/: debug_prompts.py  jrc_acquis.py  label_wikidata_qrels.py  (+2 more)
src/qac_generation/: __init__.py  openai_qa.py
(+15 files in other folders)
